--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "prime-solo-project",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "engines": {
     "node": "18.x"
   },
@@ -9,6 +10,7 @@
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "passport": "^0.4.1",
